--- a/frontend/src/components/LandingPage/landingpage.module.css
+++ b/frontend/src/components/LandingPage/landingpage.module.css
@@ -1,72 +1,247 @@
-/* Estilos para el contenedor principal */
-/* Estilos para el contenedor principal */
-.container {
-    width: 100%; /* Ajusta el ancho del contenedor al 80% del ancho de la ventana */
-    height: 100vh; /* Mantiene la altura del contenedor al 90% de la altura de la ventana */
-    margin:auto; /* Centra el contenedor horizontalmente en la pantalla */
-    background-color: rgb(0, 0, 0);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: flex;
+body {
+  margin: 0;
+}
+
+main {
+  background-image: url(../imagenes/fondo.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container{
+  width: 100%;
+  max-width: 800px;
+  margin: auto;
+  position: relative;
+}
+
+.Titulo {
+  text-align: center;
+  position: absolute;
+  top: 1%;
+  width: 100%;
+  color: #fff;
+  font-size: 36px;
+  font-family: 'Arial', sans-serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+
+.caja__trasera {
+  width: 45%;
+  padding: 6px 90px;
+  display: flex;
+  justify-content: center;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(3px);
+  background-color: rgba(1, 128, 255, 0.3);
+  position: absolute;
+  top: 70%;
+  left: 95%; /* Ajusta esta cantidad según sea necesario */
+  transform: translate(-50%, -50%); /* Centra vertical y horizontalmente */
+}
+
+.caja__trasera div {
+  margin: 20px 50px;
+  color: white;
+  transition: all 500ms;
+}
+
+.caja__trasera div p,
+.caja__trasera button {
+  margin-top: 10px;
+}
+
+.caja__trasera div h3 {
+  font-family: 'Arial', sans-serif;
+  font-size: 11.6px; /* Cambiar el tamaño de la letra */
+  text-align: center;
+}
+
+.caja__trasera div p {
+  font-family: 'Arial', sans-serif;
+  font-size: 14px; /* Cambiar el tamaño de la letra */
+  font-weight: 200;
+}
+
+.caja__trasera button {
+  padding: 10px 25px;
+  border: 2px solid #fff;
+  border-radius: 10px;
+  font-size: 14px;
+  background: transparent;
+  font-weight: 600;
+  cursor: pointer;
+  color: white;
+  outline: none;
+  transition: all 300ms;
+}
+
+.caja__trasera button:hover {
+  background: #fff;
+  color: #46A2FD;
+  border: 2px solid rgb(4, 99, 194);
+}
+
+/* Formularios */
+.container_formularios {
+  display: flex;
+  align-items: center;
+  width: 30%; /* O el valor deseado */
+  max-width: 250px;
+  position: absolute;
+  top: 65%; /* Centra verticalmente */
+  left: 310%; /* Centra horizontalmente */
+  transform: translate(-50%, -50%); /* Centra vertical y horizontalmente */
+  transition: left 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
+}
+
+.container_formularios form {
+  width: 100%;
+  border: 3px solid rgb(141, 141, 141);
+  padding: 14px 5px;
+  background: white;
+  position: absolute;
+  border-radius: 20px;
+  text-align: center; /* Centrar el contenido horizontalmente */
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.801); /* Sombra interior */
+}
+
+.container_formularios form h2 {
+  font-family: 'Arial', sans-serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  font-size: 25px;
+  text-align: center;
+  margin-bottom:1px;
+  color: #46A2FD;
+}
+
+.container_formularios form input {
+  display: block;
+  width: 80%;
+  margin: 10px auto;
+  padding: 8px; /* Aumentar el padding para un aspecto más acolchado */
+  border: 2px solid #e4e2e2; /* Añadir un borde gris claro */
+  background: #8b8a8a23; /* Cambiar el color de fondo a un tono más claro */
+  font-size: 16px;
+  outline: none;
+  transition: all 0.3s; /* Añadir una transición para suavizar el cambio */
+}
+
+.container_formularios form input:hover {
+  background: #ffffff; /* Cambiar el fondo al hacer hover */
+  border-color: #0000003a; /* Cambiar el color del borde al hacer hover */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.199); /* Agregar una sombra al hacer hover */
+  border-radius: 6px;
+}
+
+.container_formularios form button {
+  width: auto; /* Asegura que el botón ocupe todo el ancho del formulario */
+  margin-top: 30px; /* Añade un margen superior para separar el botón de otros elementos */
+  padding: 0px 20px;
+  border: none;
+  font-size: 14px;
+  background: #46A2FD;
+  font-weight: 600;
+  cursor: pointer;
+  color: white;
+  transition: all 300ms;
+  outline: none;
+}
+
+.container_formularios form button:hover {
+  background: #20507c;
+  color: #ffffff;
+  border-radius: 10px;
+}
+
+
+.Formulario_login {
+  opacity: 1;
+  display: block;
+}
+
+.Formulario_register {
+  opacity: 1;
+  display: block;
+}
+
+.passwordInputContainer {
+  position: relative;
+}
+
+.passwordInput {
+  padding-right: 40px;
+}
+
+.showHideButton {
+  position: absolute;
+  top: -30%;
+  color: black !important;
+  right: 5px; /* Ajuste fino para la posición del botón */
+  transform: translateY(-50%);
+  background: transparent !important;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.checkboxContainer {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 210px; /* Ajusta esta cantidad según sea necesario */
+  left: 20px; /* Ajusta esta cantidad según sea necesario */
+}
+
+.checkboxText {
+  font-size: 16px;
+  margin-left: 6px;
+}
+
+.logo {
+  position: absolute; 
+  width: 100px;
+  border-radius: 50px;
+  height: auto;
+  bottom: 10px;
+  left: 10px;
+  opacity: 0.8;
+}
+
+
+/* Estilos para pantallas pequeñas */
+@media screen and (max-width: 850px) {
+  main {
+    margin-top: 50px;
+  }
+
+  .caja__trasera {
+    max-width: 350px;
+    height: 300px;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin: auto;
   }
-  
-  
-  /* Estilos para el título */
-  .Titulo {
-    color: white;
-    text-align: center;
-    font-size: 40px;
-    font-family: 'Roboto', sans-serif;
-    margin-bottom: 20px;
+
+  .caja__trasera div {
+    margin: 0px;
+    position: absolute;
   }
-  
-  /* Estilos para el subtítulo */
-  .Subtitulo {
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
+
+  /* Formularios en pantallas pequeñas */
+  .container_formularios {
+    top: -10px;
+    left: -5px;
+    margin: auto;
   }
-  
-  /* Estilos para el formulario */
-  .Formulario {
-    width: 300px;
-    display: flex;
-    flex-direction: column;
+
+  .container_formularios form {
+    position: relative;
   }
-  
-  /* Estilos para los campos de entrada */
-  .Formulario input {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    outline: none;
-  }
-  
-  /* Estilos para la etiqueta del checkbox */
-  .Formulario label {
-    display: flex;
-    align-items: center;
-    color: white;
-    font-size: 14px;
-  }
-  
-  /* Estilos para el botón de envío */
-  .Formulario button {
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .Formulario button:hover {
-    background-color: #45a049;
-  }
-  
+}
