--- a/frontend/src/components/LandingPage/landingpage.module.css
+++ b/frontend/src/components/LandingPage/landingpage.module.css
@@ -3,7 +3,7 @@ body {
 }
 
 main {
-  background-image: url(../imagenes/fondo.jpg);
+  background-image: url(../../../public/imagenes/fondo.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
