--- a/frontend/src/components/Home/Home.module.css
+++ b/frontend/src/components/Home/Home.module.css
@@ -78,4 +78,6 @@ main {
   width: 130%;
   border-radius: 0 10px 10px 0;
   border: 0.5px solid black;
+  box-shadow: 0px 0px 7px #000000 inset,
+              0px 0px 7px #ffffff;
 }
