--- a/frontend/src/components/LandingPage/landingpage.module.css
+++ b/frontend/src/components/LandingPage/landingpage.module.css
@@ -2,8 +2,8 @@ body {
   margin: 0;
 }
 
-main {
-  background-image: url(../../../public/imagenes/fondo.jpg);
+.landing_main {
+  background-image: url(../../../public/imagenes/compLanding/fondo.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -13,6 +13,7 @@ main {
   align-items: center;
   justify-content: center;
 }
+
 
 .container{
   width: 100%;
