correccion en importaciones

--- a/frontend/src/components/Home/Home.module.css
+++ b/frontend/src/components/Home/Home.module.css
@@ -3,7 +3,7 @@ body {
 }
 
 .home_main {
-  background-image: url(../../../public/imagenes/compHome/wallpaperHome.jpg);
+  background-image: url(/imagenes/compHome/wallpaperHome.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
