--- a/frontend/src/components/NavBar/Navbar.module.css
+++ b/frontend/src/components/NavBar/Navbar.module.css
@@ -79,7 +79,7 @@
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
     overflow-y: auto;
-    padding-top: 170px;
+    padding-top: 200px;
     /* Ajusta según sea necesario */
 }
 
@@ -115,15 +115,18 @@
 }
 
 .nav_img {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    border-radius: 23px;
+    width: 11.5vw;
+    height: 130px;
     position: absolute;
     top: 50px;
     left: 48%;
     transform: translateX(-50%) rotateY(0deg);
-    border: 3px solid rgb(0, 0, 105);
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
+    border: 2px solid rgb(2, 2, 88);
+    background-color: rgb(255, 255, 255);
+    padding: 20px; /* Agrega un relleno interno de 20px */
+    box-sizing: border-box; /* Incluye el relleno en el cálculo del tamaño total */
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .nav_item {
