--- a/frontend/src/components/NavBar/Navbar.module.css
+++ b/frontend/src/components/NavBar/Navbar.module.css
@@ -76,29 +76,15 @@
     height: 100vh;
     background: rgba(0, 0, 255, 0.705);
     border-right: 2px solid rgb(0, 4, 255);
+    backdrop-filter: blur(5px);
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
     overflow-y: auto;
-    padding-top: 200px;
-    /* Ajusta según sea necesario */
+    padding-top: 220px;
 }
 
 .open {
     transform: translateX(0);
-}
-
-.nav_close {
-    position: absolute;
-    top: 20px;
-    right: 10px;
-    color: white;
-    cursor: pointer;
-    transform: rotate(0deg);
-    transition: transform 0.3s ease-in-out;
-}
-
-.nav_close:hover {
-    transform: rotate(90deg);
 }
 
 .nav_link {
@@ -111,22 +97,17 @@
 }
 
 .nav_link:hover {
-    transform: translateX(5px);
+    transform: translateX(8px);
 }
 
 .nav_img {
-    border-radius: 23px;
-    width: 11.5vw;
+    width: 10vw;
     height: 130px;
     position: absolute;
     top: 50px;
     left: 48%;
     transform: translateX(-50%) rotateY(0deg);
-    border: 2px solid rgb(2, 2, 88);
-    background-color: rgb(255, 255, 255);
-    padding: 20px; /* Agrega un relleno interno de 20px */
-    box-sizing: border-box; /* Incluye el relleno en el cálculo del tamaño total */
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+   filter: drop-shadow(10px 7px 10px rgb(0, 0, 0));
 }
 
 .nav_item {
