--- a/frontend/src/components/Home/Home.module.css
+++ b/frontend/src/components/Home/Home.module.css
@@ -3,11 +3,12 @@ body {
 }
 
 .home_main {
-  background-image: url(/imagenes/compHome/wallpaperHome.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
+  background-color: #000; /* Color de fondo negro sólido */
+  background: linear-gradient(90deg, rgb(0, 0, 0), rgba(15, 15, 15, 0.897)), 
+              linear-gradient(180deg, rgba(7, 7, 7, 0.993), rgb(7, 7, 7)),
+              linear-gradient(270deg, rgb(2, 2, 2), rgb(2, 2, 2)),
+              linear-gradient(360deg, rgb(5, 5, 5), rgb(0, 0, 0));
+  background-blend-mode: screen;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -24,15 +25,18 @@ body {
 .Titulo {
   text-align: center;
   position: absolute;
-  top: 1%;
-  width: 100%;
-  color: #fd7a00;
-  font-size: 48px;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #ffffff; /* Color del texto blanco */
+  font-size: 50px;
   font-weight: bold;
   font-family: 'Arial', sans-serif;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8),
-    -2px -2px 4px rgba(255, 255, 255, 0.527),
-    0px 2px 6px rgb(0, 0, 0);
+  text-transform: uppercase; /* Convertir el texto a mayúsculas */
+  letter-spacing: 5px; /* Espaciado entre letras */
+  text-shadow: 0px 3px 3px rgb(0, 0, 0), 0px 2px 5px rgb(0, 0, 0); /* Sombra del texto */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgb(248, 248, 248);
 }
 
 .contenedor_carrusel {
