--- a/frontend/src/components/Programs/programs.module.css
+++ b/frontend/src/components/Programs/programs.module.css
@@ -1,3 +1,4 @@
+
 .programContainer {
     display: flex;
     flex-direction: column;
@@ -10,15 +11,37 @@
 }
 
 .title {
-    font-size: 2rem;
-    margin-bottom: 40px;
-    color: #333;
+    font-size: 2.5rem; /* Un tamaño de fuente destacado */
+    font-family: 'Montserrat', sans-serif; /* Fuente moderna y elegante */
+    margin-bottom: 20px; /* Espaciado reducido */
+    color: #000000; /* Color de texto oscuro para un buen contraste */
     text-align: center;
+    letter-spacing: 1px; /* Espaciado entre letras */
+    position: relative;
+    display: inline-block;
+    padding: 10px 30px;
 }
 
 .description {
     font-size: 1.2rem;
-    color: #666;
+    font-family: 'Roboto', Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: #131313;
+    line-height: 1.6;
+    margin-bottom: 15px;
+    background-color: #e9e9e9a1;
+    padding: 10px;
+    border-left: 4px solid #00a0fd;
+    border-right: 4px solid #00a0fd;
+    border-radius: 5px; /* Bordes ligeramente redondeados */
+}
+
+hr{
+    border: 0;
+    height: 1px;
+    background: rgb(1, 1, 124);
+    margin: 20px 0;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .programGrid {
@@ -64,7 +87,13 @@
     font-size: 1.5rem;
     font-weight: bold;
     margin: 0;
-    color: #ffffff;
+    color: #e7e7e7;
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+.publications_Titulo{
+    text-align: center;
+    font-size: 1.3rem;
     font-family:Arial, Helvetica, sans-serif;
 }
 
@@ -156,9 +185,9 @@
 .reactionItem{
     font-family: Arial, Helvetica, sans-serif;
     display: inline-block;
-    padding: 1px 12px;
+    padding: 1px 6px;
     font-size: 14px;
-    color: #000000;
+    color: #111111;
     font-weight: bold;
 }
 
@@ -255,11 +284,13 @@
     border: none;
     color: #fff;
     cursor: pointer;
-    background-color: #1d05f7;
+    background-color: #250ef5d0;
+    backdrop-filter: blur(20px);
+    border: 2px solid rgb(3, 3, 133);
 }
 
 .reactionModalButton:hover{
- background-color: #021bfad8;
+ background-color: #250ef5;
 }
   
 .modal {
@@ -361,8 +392,8 @@
     margin-top: 5px;
 }
 
-.commentsContainer {
-    margin-top: 10px;
+.comments_Container {
+    margin-top: 5px;
     text-align: left;
     font-size: 1rem;
     font-family:Arial, Helvetica, sans-serif;
