--- a/frontend/src/components/Programs/programs.module.css
+++ b/frontend/src/components/Programs/programs.module.css
@@ -399,9 +399,35 @@ hr{
     font-family:Arial, Helvetica, sans-serif;
 }
 
+.toggleCommentsButton{
+    margin-top: 10px;
+    text-align: left;
+    display: block;
+    background: #dbdbdb;
+    color: rgb(0, 0, 0);
+    padding: 8px;
+    border-radius: 12px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.toggleCommentsButton:hover{
+    background-color: #c8e0fa;
+    border: 2px solid rgb(123, 212, 253);
+}
+
 .comment {
     margin: 5px 0;
-}
+    padding: 12px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.171), 
+                inset -2px -2px 5px rgba(255, 255, 255, 0.7);
+    font-size: 14px;
+    color: #333;
+    line-height: 1.5;
+  }
+  
 
 .commentUser {
     font-weight: bold;
@@ -424,4 +450,31 @@ hr{
     cursor: pointer;
     margin-top: 10px;
     margin-left: 6px;
+}
+
+.editButton {
+    background-color: #ffeb3b;
+    border: none;
+    color: #000;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin-right: 5px;
+    border-radius: 5px;
+}
+
+.deleteButton {
+    background-color: #f44336;
+    border: none;
+    color: #fff;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.editButton:hover {
+    background-color: #fdd835;
+}
+
+.deleteButton:hover {
+    background-color: #d32f2f;
 }
